// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Checkbox /> > Checked story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      checked=""
      class="_checkbox__input_2d475f"
      id="_r_3_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_3_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Checkbox
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      class="_checkbox__input_2d475f"
      id="_r_0_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_0_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Checkbox
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > Error story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f _checkbox--error_2d475f"
  >
    <input
      class="_checkbox__input_2d475f"
      id="_r_2_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_2_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          In error state
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > GlyphIsConsistent story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    style="font-size: 10px;"
  >
    <div
      class="_checkbox_2d475f"
    >
      <input
        checked=""
        class="_checkbox__input_2d475f"
        id="_r_4_"
        type="checkbox"
      />
      <div
        class="_checkbox__labels_2d475f"
      >
        <label
          class="_label_f9fc7e _checkbox__label_2d475f"
          for="_r_4_"
        >
          <span
            class="_text_b3eba3 _text--body-md_b3eba3"
          >
            Checkbox
          </span>
           
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > Indeterminate story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      class="_checkbox__input_2d475f"
      id="_r_5_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_5_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Checkbox
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > LongLabels story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      class="_checkbox__input_2d475f"
      id="_r_7_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_7_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit
        </span>
         
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > WithSublabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      class="_checkbox__input_2d475f"
      id="_r_1_"
      type="checkbox"
    />
    <div
      class="_checkbox__labels_2d475f"
    >
      <label
        class="_label_f9fc7e _checkbox__label_2d475f"
        for="_r_1_"
      >
        <span
          class="_text_b3eba3 _text--body-md_b3eba3"
        >
          Checkbox
        </span>
         
      </label>
      <span
        class="_text_b3eba3 _text--body-sm_b3eba3 _checkbox__sub-label_2d475f"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> > WithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_checkbox_2d475f"
  >
    <input
      aria-label="a checkbox has no name"
      class="_checkbox__input_2d475f"
      id="_r_6_"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`<Checkbox /> > inline Disabled story renders snapshot 1`] = `
<div
  class="_checkbox_2d475f"
>
  <input
    class="_checkbox__input_2d475f"
    disabled=""
    id="_r_8_"
    type="checkbox"
  />
  <div
    class="_checkbox__labels_2d475f"
  >
    <label
      class="_label_f9fc7e _label--disabled_f9fc7e _checkbox__label_2d475f"
      for="_r_8_"
    >
      <span
        class="_text_b3eba3 _text--body-md_b3eba3"
      >
        Disabled
      </span>
       
    </label>
  </div>
</div>
`;
